--- a/PASA/Dockerfile
+++ b/PASA/Dockerfile
@@ -21,7 +21,8 @@ RUN apt-get install -y git build-essential bison zlib1g-dev \
   && git clone https://github.com/lh3/bioawk.git \
   && cd bioawk \
   && make \
-  && mv bioawk maketab /user/local/bin/ 
+  && cd ../ \
+  && mv bioawk /user/local/bin/ 
  
 
 
